--- a/deploy/kubernetes/kustomize/base/tracee.yaml
+++ b/deploy/kubernetes/kustomize/base/tracee.yaml
@@ -24,9 +24,10 @@ spec:
         args:
           - --filter set=signatures
           - --output json
+          - --containers
         env:
-          - name: LIBBPFGO_OSRELEASE_FILE
-            value: /etc/os-release-host
+        - name: LIBBPFGO_OSRELEASE_FILE
+          value: /etc/os-release-host
         securityContext:
           privileged: true
         volumeMounts:
@@ -34,6 +35,18 @@ spec:
           mountPath: /tmp/tracee
         - name: etc-os-release
           mountPath: /etc/os-release-host
+          readOnly: true
+        - name: docker
+          mountPath: /var/run/docker.sock
+          readOnly: true
+        - name: containerd
+          mountPath: /var/run/containerd/containerd.sock
+          readOnly: true
+        - name: crio
+          mountPath: /var/run/crio/crio.sock
+          readOnly: true
+        - name: podman
+          mountPath: /var/run/podman/podman.sock
           readOnly: true
         # NOTE: Resource consumption will vary between different use cases and
         # workload characteristics. User should monitor tracee for resource
@@ -55,9 +68,21 @@ spec:
         - effect: NoExecute
           operator: Exists
       volumes:
-      - hostPath:
+      - name: tmp-tracee
+        hostPath:
           path: /tmp/tracee
-        name: tmp-tracee
-      - hostPath:
+      - name: etc-os-release 
+        hostPath:
           path: /etc/os-release
-        name: etc-os-release
+      - name: docker
+        hostPath:
+          path: /var/run/docker.sock
+      - name: containerd
+        hostPath:
+          path: /var/run/containerd/containerd.sock
+      - name: crio
+        hostPath:
+          path: /var/run/crio/crio.sock
+      - name: podman
+        hostPath:
+          path: /var/run/podman/podman.sock
