flags: cli: docs: rename trace flag to filter
This is a breaking change, but it is necessary to provide a more
consistent user experience.

The flag is now called --filter, and the docs are updated to reflect
the new name.

--- a/deploy/helm/tracee/templates/daemonset.yaml
+++ b/deploy/helm/tracee/templates/daemonset.yaml
@@ -35,7 +35,7 @@ spec:
           args:
             - --output
             - json
-            - --trace
+            - --filter
             - event={{ .Values.events }}
           {{- end }}
           {{- if .Values.postee.enabled }}
