--- a/deploy/kubernetes/tracee-postee/tracee.yaml
+++ b/deploy/kubernetes/tracee-postee/tracee.yaml
@@ -18,9 +18,9 @@ spec:
     spec:
       containers:
       - args:
-        - --webhook=http://postee-svc:8082
-        - --webhook-template=./templates/rawjson.tmpl
-        - --webhook-content-type=application/json
+        - --filter set=signatures
+        - --output json
+        - --output webhook:http://postee-svc:8082
         env:
         - name: LIBBPFGO_OSRELEASE_FILE
           value: /etc/os-release-host
