--- a/deploy/helm/tracee/templates/daemonset.yaml
+++ b/deploy/helm/tracee/templates/daemonset.yaml
@@ -30,11 +30,11 @@ spec:
         - name: tracee
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          {{- if .Values.postee.enabled }}
           args:
-            - --webhook={{ .Values.postee.webhook }}
-            - --webhook-template=./templates/rawjson.tmpl
-            - --webhook-content-type=application/json
+            - --filter set=signatures
+            - --output json
+          {{- if .Values.postee.enabled }}
+            - --output webhook:{{ .Values.postee.webhook }}
           {{- end }}
           env:
             - name: LIBBPFGO_OSRELEASE_FILE
