--- a/deploy/kubernetes/kustomize/base/tracee.yaml
+++ b/deploy/kubernetes/kustomize/base/tracee.yaml
@@ -21,6 +21,9 @@ spec:
       - name: tracee
         image: docker.io/aquasec/tracee:0.11.1
         imagePullPolicy: IfNotPresent
+        args:
+          - --filter set=signatures
+          - --output json
         env:
           - name: LIBBPFGO_OSRELEASE_FILE
             value: /etc/os-release-host
