--- a/deploy/kubernetes/kustomize/postee/kustomization.yaml
+++ b/deploy/kubernetes/kustomize/postee/kustomization.yaml
@@ -9,9 +9,5 @@ patchesJson6902:
     name: tracee
   patch: |-
     - op: add
-      path: /spec/template/spec/containers/0/args
-      value: 
-        - --webhook=http://postee-svc:8082
-        - --webhook-template=./templates/rawjson.tmpl
-        - --webhook-content-type=application/json
-
+      path: /spec/template/spec/containers/0/args/2
+      value: --output webhook:http://postee-svc:8082
