--- a/deploy/kubernetes/tracee-falcosidekick/tracee.yaml
+++ b/deploy/kubernetes/tracee-falcosidekick/tracee.yaml
@@ -18,9 +18,9 @@ spec:
     spec:
       containers:
       - args:
-        - --webhook http://tracee-webhook:2801
-        - --webhook-template ./templates/falcosidekick.tmpl
-        - --webhook-content-type application/json
+        - --filter set=signatures
+        - --output json
+        - --output webhook:http://tracee-webhook:2801
         env:
         - name: LIBBPFGO_OSRELEASE_FILE
           value: /etc/os-release-host
