--- a/deploy/kubernetes/tracee/tracee.yaml
+++ b/deploy/kubernetes/tracee/tracee.yaml
@@ -17,7 +17,10 @@ spec:
       name: tracee
     spec:
       containers:
-      - env:
+      - args:
+        - --filter set=signatures
+        - --output json
+        env:
         - name: LIBBPFGO_OSRELEASE_FILE
           value: /etc/os-release-host
         image: docker.io/aquasec/tracee:0.11.1
