--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,7 +10,6 @@ nav:
   - Getting Started:
       - Overview: index.md
       - Kubernetes - Quick Start: getting-started/kubernetes-quickstart.md
-      - Docker - Quick Start: getting-started/docker-quickstart.md
       - Installation:
           - Getting Tracee: getting-started/installing/getting.md
           - Prerequisites: getting-started/installing/prerequisites.md
@@ -22,14 +21,12 @@ nav:
               - Fedora: getting-started/installing/distros/fedora.md
               - NixOS: getting-started/installing/distros/nix-nixos.md
           - Linux Headers: getting-started/installing/headers.md
-  - Tutorials:
-      - Everything is an event: tutorials/everything-is-an-event.md
+  - Tutorials: tutorials/overview.md
       - Deploy Tracee Grafana Dashboard: tutorials/deploy-grafana-dashboard.md
       - Accessing Tracee Logs through Promtail and Loki: tutorials/promtail.md
   - Docs:
       - Overview: docs/overview.md
       - Events:
-          - Getting Started: docs/events/index.md
           - Built-in Events: 
               - Available Rules: docs/events/built-in-events/available-rules.md
               - Syscalls: docs/events/built-in-events/syscalls.md
@@ -112,7 +109,6 @@ nav:
           - Override OS files: classic-docs/deep-dive/override-os-files.md
           - Secure Tracing: classic-docs/deep-dive/secure-tracing.md
           - Healthz: classic-docs/deep-dive/healthz.md
-
   - Contributing:
       - Overview: contributing/overview.md
       - Source Code Guidelines: contributing/guidelines.md
